--- a/base/configs/superset/assets/charts/Registered_patients_aged_40_and_above_that_have_had_their_NCD_screening_for_the_first_time_14.yaml
+++ b/base/configs/superset/assets/charts/Registered_patients_aged_40_and_above_that_have_had_their_NCD_screening_for_the_first_time_14.yaml
@@ -1,32 +1,50 @@
 slice_name: Registered patients aged 40 and above that have had their NCD screening
   for the first time
-description: null
+description: "\u1799\u17C9\u17B6\u1784\u17A0\u17C4\u1785\u178E\u17B6\u179F\u17CB\u1794\
+  \u17D2\u179A\u1787\u17B6\u1787\u1793\u1790\u17D2\u1798\u17B8\u1785\u17C6\u1793\u17BD\
+  \u1793\u17E5\u17E0\u1793\u17B6\u1780\u17CB\u1780\u17D2\u1793\u17BB\u1784\u17E1\u1781\
+  \u17C2 \u178A\u17C2\u179B\u1798\u17B6\u1793\u17A2\u17B6\u1799\u17BB\u1785\u17B6\u1794\
+  \u17CB\u1796\u17B8\u17E4\u17E0\u1786\u17D2\u1793\u17B6\u17C6\u17A1\u17BE\u1784\u1791\
+  \u17C5\u1794\u17B6\u1793\u1785\u17BB\u17C7\u1788\u17D2\u1798\u17C4\u17C7 \u1793\u17B7\
+  \u1784\u1791\u1791\u17BD\u179B\u1794\u17B6\u1793\u179F\u17C1\u179C\u17B6\u1796\u17B7\
+  \u1793\u17B7\u178F\u17D2\u1799\u179A\u1780\u1787\u17C6\u1784\u17BA\u1791\u17B9\u1780\
+  \u1793\u17C4\u1798\u1795\u17D2\u17A2\u17C2\u1798 \u1793\u17B7\u1784\u1787\u17C6\u1784\
+  \u17BA\u179B\u17BE\u179F\u179F\u1798\u17D2\u1796\u17B6\u1792\u1788\u17B6\u1798 \u1793\
+  \u17B7\u1784\u1796\u17D2\u1799\u17B6\u1794\u17B6\u179B\u1787\u17B6\u179B\u17BE\u1780\
+  \u178A\u17C6\u1794\u17BC\u1784\u17D4 (At least 50 population aged 40 years+ registered\
+  \ and received the first screening and treatment services for diabetes and hypertension\
+  \ per month)"
 certified_by: null
 certification_details: null
 viz_type: table
 params:
-  datasource: 36__table
+  datasource: 9__table
   viz_type: table
-  slice_id: 152
-  granularity_sqla: Visit Start date
-  time_grain_sqla: P1D
-  time_range: No filter
+  slice_id: 14
   query_mode: raw
   groupby: []
+  time_grain_sqla: P1D
+  temporal_columns_lookup:
+    Visit End date: true
+    Visit Start date: true
+    Follow-Up Date: true
+    Patient's Birthdate: true
   metrics: []
   all_columns:
-  - Facility Name
-  - Facility District
   - Facility Province
+  - Facility District
+  - Facility Name
   - OpenMRS ID
-  - Patient's First name
   - Patient's Last name
+  - Patient's First name
+  - Patient's Birthdate
   - Patient Address
-  - Phone number
   - Other Identifiers
+  - Patient's Gender
+  - Phone number
+  - Visit Type
   - Visit Start date
   - Visit End date
-  - Visit Type
   - Referral source
   - Insurance type
   - Known Diabetes
@@ -34,20 +52,20 @@ params:
   - Weight
   - Height
   - Circumference
+  - BMI
   - Systolic Pressure
   - Diastolic Pressure
-  - BMI
   - Pulse
   - Temperature
-  - Fasting Blood Sugar
   - Random Blood Sugar
-  - OGTT
+  - Fasting Blood Sugar
   - HbA1c
+  - OGTT
   - Albumin
   - Ketones
   - Diagnosis 1
   - Diagnosis 2
-  - Facility
+  - Referral Facility
   - Has a Referral Letter
   - CVD Risk Score
   - Follow-Up For
@@ -57,16 +75,28 @@ params:
   percent_metrics: []
   adhoc_filters:
   - expressionType: SIMPLE
-    subject: indicator
-    operator: ==
-    operatorId: EQUALS
-    comparator: patients-aged-40-above-with-first-time ncd-screening
+    subject: Visit Start date
+    operator: TEMPORAL_RANGE
+    comparator: No filter
     clause: WHERE
     sqlExpression: null
     isExtra: false
     isNew: false
     datasourceWarning: false
-    filterOptionName: filter_qvcziuvafa_o222siew87
+    filterOptionName: filter_n5dad56ctk_yji7xby1r0a
+  - expressionType: SIMPLE
+    subject: indicator
+    operator: IN
+    operatorId: IN
+    comparator:
+    - 80-pecent-followup-with-hypertension-iabetes-and-medication
+    - patients-aged-40-above-with-first-time ncd-screening
+    clause: WHERE
+    sqlExpression: null
+    isExtra: false
+    isNew: false
+    datasourceWarning: false
+    filterOptionName: filter_skfq75qb4zi_azi1ldrrjvj
   order_by_cols: []
   row_limit: 1000
   server_page_length: 10
@@ -76,27 +106,29 @@ params:
   color_pn: true
   extra_form_data: {}
   dashboards:
-  - 20
-  annotation_layers: []
-query_context: '{"datasource":{"id":36,"type":"table"},"force":false,"queries":[{"time_range":"No
-  filter","granularity":"Visit Start date","filters":[{"col":"indicator","op":"==","val":"patients-aged-40-above-with-first-time
-  ncd-screening"}],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
-  Name","Facility District","Facility Province","OpenMRS ID","Patient''s First name","Patient''s
-  Last name","Patient Address","Phone number","Other Identifiers","Visit Start date","Visit
-  End date","Visit Type","Referral source","Insurance type","Known Diabetes","Known
-  Hypertension","Weight","Height","Circumference","Systolic Pressure","Diastolic Pressure","BMI","Pulse","Temperature","Fasting
-  Blood Sugar","Random Blood Sugar","OGTT","HbA1c","Albumin","Ketones","Diagnosis
-  1","Diagnosis 2","Facility","Has a Referral Letter","CVD Risk Score","Follow-Up
-  For","Follow-Up Date","Started on Medication","Drug Names"],"orderby":[],"annotation_layers":[],"row_limit":1000,"series_limit":0,"order_desc":true,"url_params":{},"custom_params":{},"custom_form_data":{},"post_processing":[]}],"form_data":{"datasource":"36__table","viz_type":"table","slice_id":152,"granularity_sqla":"Visit
-  Start date","time_grain_sqla":"P1D","time_range":"No filter","query_mode":"raw","groupby":[],"metrics":[],"all_columns":["Facility
-  Name","Facility District","Facility Province","OpenMRS ID","Patient''s First name","Patient''s
-  Last name","Patient Address","Phone number","Other Identifiers","Visit Start date","Visit
-  End date","Visit Type","Referral source","Insurance type","Known Diabetes","Known
-  Hypertension","Weight","Height","Circumference","Systolic Pressure","Diastolic Pressure","BMI","Pulse","Temperature","Fasting
-  Blood Sugar","Random Blood Sugar","OGTT","HbA1c","Albumin","Ketones","Diagnosis
-  1","Diagnosis 2","Facility","Has a Referral Letter","CVD Risk Score","Follow-Up
-  For","Follow-Up Date","Started on Medication","Drug Names"],"percent_metrics":[],"adhoc_filters":[{"expressionType":"SIMPLE","subject":"indicator","operator":"==","operatorId":"EQUALS","comparator":"patients-aged-40-above-with-first-time
-  ncd-screening","clause":"WHERE","sqlExpression":null,"isExtra":false,"isNew":false,"datasourceWarning":false,"filterOptionName":"filter_qvcziuvafa_o222siew87"}],"order_by_cols":[],"row_limit":1000,"server_page_length":10,"include_time":false,"order_desc":true,"table_timestamp_format":"smart_date","show_cell_bars":true,"color_pn":true,"extra_form_data":{},"dashboards":[20],"force":false,"result_format":"json","result_type":"full"},"result_format":"json","result_type":"full"}'
+  - 1
+query_context: '{"datasource":{"id":9,"type":"table"},"force":false,"queries":[{"filters":[{"col":"Visit
+  Start date","op":"TEMPORAL_RANGE","val":"No filter"},{"col":"indicator","op":"IN","val":["80-pecent-followup-with-hypertension-iabetes-and-medication","patients-aged-40-above-with-first-time
+  ncd-screening"]}],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
+  Province","Facility District","Facility Name","OpenMRS ID","Patient''s Last name","Patient''s
+  First name","Patient''s Birthdate","Patient Address","Other Identifiers","Patient''s
+  Gender","Phone number","Visit Type","Visit Start date","Visit End date","Referral
+  source","Insurance type","Known Diabetes","Known Hypertension","Weight","Height","Circumference","BMI","Systolic
+  Pressure","Diastolic Pressure","Pulse","Temperature","Random Blood Sugar","Fasting
+  Blood Sugar","HbA1c","OGTT","Albumin","Ketones","Diagnosis 1","Diagnosis 2","Referral
+  Facility","Has a Referral Letter","CVD Risk Score","Follow-Up For","Follow-Up Date","Started
+  on Medication","Drug Names"],"orderby":[],"annotation_layers":[],"row_limit":1000,"series_limit":0,"order_desc":true,"url_params":{},"custom_params":{},"custom_form_data":{},"post_processing":[]}],"form_data":{"datasource":"9__table","viz_type":"table","slice_id":14,"query_mode":"raw","groupby":[],"time_grain_sqla":"P1D","temporal_columns_lookup":{"Visit
+  End date":true,"Visit Start date":true,"Follow-Up Date":true,"Patient''s Birthdate":true},"metrics":[],"all_columns":["Facility
+  Province","Facility District","Facility Name","OpenMRS ID","Patient''s Last name","Patient''s
+  First name","Patient''s Birthdate","Patient Address","Other Identifiers","Patient''s
+  Gender","Phone number","Visit Type","Visit Start date","Visit End date","Referral
+  source","Insurance type","Known Diabetes","Known Hypertension","Weight","Height","Circumference","BMI","Systolic
+  Pressure","Diastolic Pressure","Pulse","Temperature","Random Blood Sugar","Fasting
+  Blood Sugar","HbA1c","OGTT","Albumin","Ketones","Diagnosis 1","Diagnosis 2","Referral
+  Facility","Has a Referral Letter","CVD Risk Score","Follow-Up For","Follow-Up Date","Started
+  on Medication","Drug Names"],"percent_metrics":[],"adhoc_filters":[{"expressionType":"SIMPLE","subject":"Visit
+  Start date","operator":"TEMPORAL_RANGE","comparator":"No filter","clause":"WHERE","sqlExpression":null,"isExtra":false,"isNew":false,"datasourceWarning":false,"filterOptionName":"filter_n5dad56ctk_yji7xby1r0a"},{"expressionType":"SIMPLE","subject":"indicator","operator":"IN","operatorId":"IN","comparator":["80-pecent-followup-with-hypertension-iabetes-and-medication","patients-aged-40-above-with-first-time
+  ncd-screening"],"clause":"WHERE","sqlExpression":null,"isExtra":false,"isNew":false,"datasourceWarning":false,"filterOptionName":"filter_skfq75qb4zi_azi1ldrrjvj"}],"order_by_cols":[],"row_limit":1000,"server_page_length":10,"order_desc":true,"table_timestamp_format":"smart_date","show_cell_bars":true,"color_pn":true,"extra_form_data":{},"dashboards":[1],"force":false,"result_format":"json","result_type":"full","include_time":false},"result_format":"json","result_type":"full"}'
 cache_timeout: null
 uuid: c7bd827c-daa4-48ab-986d-0cd07a139b9a
 version: 1.0.0
