--- a/base/configs/superset/assets/datasets/Analytics/ccs_rh_raw_data_dataset.yaml
+++ b/base/configs/superset/assets/datasets/Analytics/ccs_rh_raw_data_dataset.yaml
@@ -1,4 +1,4 @@
-table_name: Cervical Cancer Screening HC Raw Data
+table_name: Cervical Cancer Screening RH Raw Data
 main_dttm_col: null
 description: null
 default_endpoint: null
@@ -8,8 +8,8 @@ schema: null
 sql: "SELECT\n  MAX(p.openmrs_id) AS client_id,\n  MAX(p.patient_name) AS client_name,\n\
   \  MAX(p.gender) AS gender,\n  MAX(\n    DATE_PART ('year', age (v.date_started,\
   \ p.birthdate))\n  ) AS age,\n  MAX(p.birthdate) AS birthdate,\n  MAX(p.id_poor)\
-  \ AS id_poor,\n  MAX(p.national_id) AS national_id,\n  MAX(p.covid_vaccination_id)\
-  \ AS covid_vaccination_id,\n  MAX(p.pmrs_id) AS pmrs_id,\n  MAX(p.nssf) AS nssf,\n\
+  \ AS id_poor,\n  MAX(p.national_id) AS national_id,\n  MAX(p.covid_vacination_id)\
+  \ AS covid_vacination_id,\n  MAX(p.pmrs_id) AS pmrs_id,\n  MAX(p.nssf) AS nssf,\n\
   \  MAX(p.ssn) AS ssn,\n  MAX(p.passport_no) AS passport_no,\n  MAX(p.other_identifiers)\
   \ AS other_identifiers,\n  MAX(p.province) AS province,\n  MAX(p.district) AS district,\n\
   \  MAX(p.commune) AS commune,\n  MAX(p.village) AS village,\n  MAX(p.occupation)\
@@ -17,7 +17,7 @@ sql: "SELECT\n  MAX(p.openmrs_id) AS client_id,\n  MAX(p.patient_name) AS client
   \ AS ethnicity,\n  MAX(p.marital_status) AS marital_status,\n  MAX(p.education)\
   \ AS education,\n  MAX(v.date_started) AS visit_date,\n  MAX(DATE (v.date_started))\
   \ AS visit_start_date,\n  MAX(CAST(v.date_started AS TIME)) AS visit_start_time,\n\
-  \  MAX(DATE (v.date_stopped)) AS visit_end_date,\n  MAX(CAST(v.date_stopped AS TIME))\
+  \  MAX(DATE (v.date_stopped)) AS vist_end_date,\n  MAX(CAST(v.date_stopped AS TIME))\
   \ AS visit_end_time,\n  MAX(v.type) AS visit_type,\n  -- Referred from: Referral\
   \ Hospital / Has a referral letter ?: No / Address Zone: Zone A / Insurance Type:\
   \ HEF_Poor\n  MAX(\n    SUBSTRING(\n      v.visit_attributes\n      FROM\n     \
@@ -193,37 +193,37 @@ sql: "SELECT\n  MAX(p.openmrs_id) AS client_id,\n  MAX(p.patient_name) AS client
   \      ) AS openmrs_id,\n      SUBSTRING(\n        identifiers\n        FROM\n \
   \         'National ID: ([^,]*)'\n      ) AS national_id,\n      SUBSTRING(\n  \
   \      identifiers\n        FROM\n          'COVID vaccination ID: ([^,]*)'\n  \
-  \    ) AS covid_vaccination_id,\n      SUBSTRING(\n        identifiers\n       \
-  \ FROM\n          'PMRS ID: ([^,]*)'\n      ) AS pmrs_id,\n      SUBSTRING(\n  \
-  \      identifiers\n        FROM\n          'NSSF: ([^,]*)'\n      ) AS nssf,\n\
-  \      SUBSTRING(\n        identifiers\n        FROM\n          'SSN: ([^,]*)'\n\
-  \      ) AS ssn,\n      SUBSTRING(\n        identifiers\n        FROM\n        \
-  \  'Passport No: ([^,]*)'\n      ) AS passport_no,\n      COALESCE(\n        REGEXP_REPLACE\
-  \ (\n          REGEXP_REPLACE (\n            identifiers,\n            '(?:OpenMRS\
-  \ ID|National ID|IDPoor|PMRS ID|COVID vaccination ID): [^,]*,?\\s?',\n         \
-  \   '',\n            'g'\n          ),\n          '^, |, $',\n          ''\n   \
-  \     ),\n        NULL\n      ) AS other_identifiers,\n      -- Addresses\n    \
-  \  address_country AS country,\n      address_state_province AS province,\n    \
-  \  address_county_district AS district,\n      address_city AS commune,\n      address_1\
-  \ AS village,\n      -- Attributes\n      SUBSTRING(\n        attributes\n     \
-  \   FROM\n          'Occupation: ([^/]*)'\n      ) AS occupation,\n      SUBSTRING(\n\
-  \        attributes\n        FROM\n          'Place of Birth: ([^/]*)'\n      )\
-  \ AS place_of_birth,\n      SUBSTRING(\n        attributes\n        FROM\n     \
-  \     'Ethnicity: ([^/]*)'\n      ) AS ethnicity,\n      SUBSTRING(\n        attributes\n\
-  \        FROM\n          'Marital Status: ([^/]*)'\n      ) AS marital_status,\n\
-  \      SUBSTRING(\n        attributes\n        FROM\n          'Education: ([^/]*)'\n\
-  \      ) AS education\n    FROM\n      patients\n    WHERE\n      person_voided\
-  \ IS FALSE\n  ) p ON (p.patient_uuid=v.patient_uuid)\nWHERE\n  o.obs_voided IS FALSE\n\
-  \  AND v.visit_voided IS FALSE\n  -- Cervical Cancer New Visit & Cervical Cancer\
-  \ Follow-up Visit\n  AND v.visit_type_uuid IN (\n    'cad25c07-4657-4167-8b57-8ea1a3830e9b',\n\
-  \    'd2bf1776-671d-4e0f-a850-f7fef7aa4044'\n  )\n    -- Health Center (HC)\n AND\
-  \ l.location_tags ILIKE '%Health Center%'\nGROUP BY\n  v.visit_uuid,\n  p.patient_uuid"
+  \    ) AS covid_vacination_id,\n      SUBSTRING(\n        identifiers\n        FROM\n\
+  \          'PMRS ID: ([^,]*)'\n      ) AS pmrs_id,\n      SUBSTRING(\n        identifiers\n\
+  \        FROM\n          'NSSF: ([^,]*)'\n      ) AS nssf,\n      SUBSTRING(\n \
+  \       identifiers\n        FROM\n          'SSN: ([^,]*)'\n      ) AS ssn,\n \
+  \     SUBSTRING(\n        identifiers\n        FROM\n          'Passport No: ([^,]*)'\n\
+  \      ) AS passport_no,\n      COALESCE(\n        REGEXP_REPLACE (\n          REGEXP_REPLACE\
+  \ (\n            identifiers,\n            '(?:OpenMRS ID|National ID|IDPoor|PMRS\
+  \ ID|COVID vaccination ID): [^,]*,?\\s?',\n            '',\n            'g'\n  \
+  \        ),\n          '^, |, $',\n          ''\n        ),\n        NULL\n    \
+  \  ) AS other_identifiers,\n      -- Addresses\n      address_country AS country,\n\
+  \      address_state_province AS province,\n      address_county_district AS district,\n\
+  \      address_city AS commune,\n      address_1 AS village,\n      -- Attributes\n\
+  \      SUBSTRING(\n        attributes\n        FROM\n          'Occupation: ([^/]*)'\n\
+  \      ) AS occupation,\n      SUBSTRING(\n        attributes\n        FROM\n  \
+  \        'Place of Birth: ([^/]*)'\n      ) AS place_of_birth,\n      SUBSTRING(\n\
+  \        attributes\n        FROM\n          'Ethnicity: ([^/]*)'\n      ) AS ethnicity,\n\
+  \      SUBSTRING(\n        attributes\n        FROM\n          'Marital Status:\
+  \ ([^/]*)'\n      ) AS marital_status,\n      SUBSTRING(\n        attributes\n \
+  \       FROM\n          'Education: ([^/]*)'\n      ) AS education\n    FROM\n \
+  \     patients\n    WHERE\n      person_voided IS FALSE\n  ) p ON (p.patient_uuid=v.patient_uuid)\n\
+  WHERE\n  o.obs_voided IS FALSE\n  AND v.visit_voided IS FALSE\n  -- Cervical Cancer\
+  \ New Visit & Cervical Cancer Follow-up Visit\n  AND v.visit_type_uuid IN (\n  \
+  \  'cad25c07-4657-4167-8b57-8ea1a3830e9b',\n    'd2bf1776-671d-4e0f-a850-f7fef7aa4044'\n\
+  \  )\n  -- Referral Hospital (RH)\n AND l.location_tags LIKE '%Referral Hospital%'\n\
+  GROUP BY\n  v.visit_uuid,\n  p.patient_uuid"
 params: null
 template_params: null
 filter_select_enabled: false
 fetch_values_predicate: null
 extra: null
-uuid: 5457e2a2-5943-4b14-8a0e-878c7ba4bc8f
+uuid: 2a5e581b-ad24-4018-8c33-4a5b33b3eb02
 metrics:
 - metric_name: count
   verbose_name: null
@@ -488,6 +488,20 @@ columns:
   description: null
   python_date_format: null
   extra: {}
+- column_name: covid_vacination_id
+  verbose_name: "\u179B\u17C1\u1781\u179F\u1798\u17D2\u1782\u17B6\u179B\u17CB\u1780\
+    \u17B6\u178F\u1785\u17B6\u1780\u17CB  \u179C\u17C9\u17B6\u1780\u17CB\u179F\u17B6\
+    \u17C6\u1784 COVID (Covid Vaccination ID)"
+  is_dttm: false
+  is_active: true
+  type: STRING
+  advanced_data_type: null
+  groupby: true
+  filterable: true
+  expression: ''
+  description: null
+  python_date_format: null
+  extra: {}
 - column_name: hpv_test_result
   verbose_name: "\u178F\u17C1\u179F\u17D2\u178F \u17A2\u17C1\u1785 \u1797\u17B8 \u179C\
     \u17B8 \u179B\u1791\u17D2\u1792\u1795\u179B (HPV Result)"
@@ -629,7 +643,7 @@ columns:
   verbose_name: "\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6\u1794\u1789\u17D2\u1785\
     \u1794\u17CB\u1780\u17B6\u179A\u1796\u17B7\u1793\u17B7\u178F\u17D2\u1799\u1787\
     \u17C6\u1784\u17BA (End Time)"
-  is_dttm: true
+  is_dttm: false
   is_active: true
   type: TIME
   advanced_data_type: null
@@ -639,18 +653,18 @@ columns:
   description: Visit's end time
   python_date_format: null
   extra: {}
-- column_name: visit_start_time_text
-  verbose_name: "\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6\u1785\u17B6\u1794\u17CB\
-    \u1795\u17D2\u178F\u17BE\u1798\u1796\u17B7\u1793\u17B7\u178F\u17D2\u1799\u1787\
-    \u17C6\u1784\u17BA (Start Time)"
-  is_dttm: false
+- column_name: vist_end_date
+  verbose_name: "\u1780\u17B6\u179B\u1794\u179A\u17B7\u1785\u17D2\u1786\u17C1\u1791\
+    \u1794\u1789\u17D2\u1785\u1794\u17CB\u1780\u17B6\u179A\u1798\u1780\u1796\u17B7\
+    \u1793\u17B7\u178F\u17D2\u1799\u1787\u17C6\u1784\u17BA (End Date)"
+  is_dttm: true
   is_active: true
-  type: STRING
+  type: DATE
   advanced_data_type: null
   groupby: true
   filterable: true
-  expression: visit_start_time
-  description: Visit's Start Time
+  expression: ''
+  description: Visit End Date
   python_date_format: null
   extra: {}
 - column_name: has_current_stis
@@ -833,7 +847,7 @@ columns:
   extra: {}
 - column_name: rf_hf_code
   verbose_name: "\u179B\u17C1\u1781\u1780\u17BC\u178A\u1798\u17BC\u179B\u178A\u17D2\
-    \u178B\u17B6\u1793\u179F\u17BB\u1781\u17B6\u1797\u17B7\u1794\u17B6\u179B (Referral\
+    \u178B\u17B6\u1793\u179F\u17BB\u1781\u17B6\u1797\u17B7\u1794\u17B6\u179B (*Referral\
     \ HF's Code)"
   is_dttm: false
   is_active: true
@@ -847,8 +861,8 @@ columns:
   extra: {}
 - column_name: rf_hf_name
   verbose_name: "\u1788\u17D2\u1798\u17C4\u17C7\u1798\u17BC\u179B\u178A\u17D2\u178B\
-    \u17B6\u1793\u179F\u17BB\u1781\u17B6\u1797\u17B7\u1794\u17B6\u179B (Referral HF's\
-    \ Name)"
+    \u17B6\u1793\u179F\u17BB\u1781\u17B6\u1797\u17B7\u1794\u17B6\u179B (*Referral\
+    \ HF's Name)"
   is_dttm: false
   is_active: true
   type: STRING
@@ -965,33 +979,6 @@ columns:
   description: null
   python_date_format: null
   extra: {}
-- column_name: visit_end_date
-  verbose_name: "\u1780\u17B6\u179B\u1794\u179A\u17B7\u1785\u17D2\u1786\u17C1\u1791\
-    \u1794\u1789\u17D2\u1785\u1794\u17CB\u1793\u17C3\u1780\u17B6\u179A\u1796\u17B7\
-    \u1793\u17B7\u178F\u17D2\u1799 (End Visit EndDate)"
-  is_dttm: true
-  is_active: true
-  type: DATE
-  advanced_data_type: null
-  groupby: true
-  filterable: true
-  expression: null
-  description: null
-  python_date_format: null
-  extra: {}
-- column_name: covid_vaccination_id
-  verbose_name: "\u179C\u17C9\u17B6\u1780\u17CB\u179F\u17B6\u17C6\u1784\u1780\u17BC\
-    \u179C\u17B8\u178F\u17E1\u17E9 (Covid Vaccination ID)"
-  is_dttm: false
-  is_active: true
-  type: STRING
-  advanced_data_type: null
-  groupby: true
-  filterable: true
-  expression: null
-  description: null
-  python_date_format: null
-  extra: {}
 - column_name: visit_province
   verbose_name: "\u1781\u17C1\u178F\u17D2\u178F/\u1780\u17D2\u179A\u17BB\u1784 (Province/city)"
   is_dttm: false
@@ -1069,10 +1056,9 @@ columns:
   description: null
   python_date_format: null
   extra: {}
-- column_name: hiv_treatment
-  verbose_name: "\u1780\u17B6\u179A\u1796\u17D2\u1799\u17B6\u1794\u17B6\u179B\u1798\
-    \u17C1\u179A\u17C4\u1782\u17A2\u17C1\u178A\u179F\u17CD/\u1787\u17C6\u1784\u17BA\
-    \u17A2\u17C1\u178A\u179F\u17CD (HIV/AIDS treatment)"
+- column_name: rf_hf_province
+  verbose_name: "\u1781\u17C1\u178F\u17D2\u178F/\u1780\u17D2\u179A\u17BB\u1784 (*Referral\
+    \ Province/City)"
   is_dttm: false
   is_active: true
   type: STRING
@@ -1083,9 +1069,23 @@ columns:
   description: null
   python_date_format: null
   extra: {}
-- column_name: rf_hf_province
-  verbose_name: "\u1781\u17C1\u178F\u17D2\u178F/\u1780\u17D2\u179A\u17BB\u1784 (Referral\
-    \ Province/City)"
+- column_name: rf_hf_district
+  verbose_name: "\u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\u17B7\u1794\
+    \u178F\u17D2\u178F\u17B7 (*Referral OD)"
+  is_dttm: false
+  is_active: true
+  type: STRING
+  advanced_data_type: null
+  groupby: true
+  filterable: true
+  expression: ''
+  description: null
+  python_date_format: null
+  extra: {}
+- column_name: hiv_treatment
+  verbose_name: "\u1780\u17B6\u179A\u1796\u17D2\u1799\u17B6\u1794\u17B6\u179B\u1798\
+    \u17C1\u179A\u17C4\u1782\u17A2\u17C1\u178A\u179F\u17CD/\u1787\u17C6\u1784\u17BA\
+    \u17A2\u17C1\u178A\u179F\u17CD (HIV/AIDS treatment)"
   is_dttm: false
   is_active: true
   type: STRING
@@ -1188,24 +1188,11 @@ columns:
   description: null
   python_date_format: null
   extra: {}
-- column_name: rf_hf_district
-  verbose_name: "\u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\u17B7\u1794\
-    \u178F\u17D2\u178F\u17B7 (Referral OD)"
-  is_dttm: false
-  is_active: true
-  type: STRING
-  advanced_data_type: null
-  groupby: true
-  filterable: true
-  expression: ''
-  description: null
-  python_date_format: null
-  extra: {}
 - column_name: visit_start_time
   verbose_name: "\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6\u1785\u17B6\u1794\u17CB\
     \u1795\u17D2\u178F\u17BE\u1798\u1796\u17B7\u1793\u17B7\u178F\u17D2\u1799\u1787\
     \u17C6\u1784\u17BA (Start Time)"
-  is_dttm: true
+  is_dttm: false
   is_active: true
   type: TIME
   advanced_data_type: null
@@ -1611,4 +1598,4 @@ columns:
   python_date_format: null
   extra: {}
 version: 1.0.0
-database_uuid: b90d1451-c3b9-4f55-ab9a-f872d933a1f6
+database_uuid: 4e5f4045-a62d-4964-b719-58229a60e7fe
