--- a/base/configs/superset/assets/dashboards/HC_NCD_OPD_Register_Report_Dashboard_2.yaml
+++ b/base/configs/superset/assets/dashboards/HC_NCD_OPD_Register_Report_Dashboard_2.yaml
@@ -25,7 +25,7 @@ position:
   GRID_ID:
     children:
     - ROW-XCnHAguP-V
-    - ROW-N-NBVPSIP3
+    - ROW-N-OKQH58Z3
     id: GRID_ID
     parents:
     - ROOT_ID
@@ -50,10 +50,10 @@ position:
     - ROOT_ID
     - GRID_ID
     type: ROW
-  ROW-N-NBVPSIP3:
+  ROW-N-OKQH58Z3:
     children:
-    - CHART-NHKMBZNW
-    id: ROW-N-NBVPSIP3
+    - CHART-R1ZJR3ZG
+    id: ROW-N-OKQH58Z3
     meta:
       '0': ROOT_ID
       background: BACKGROUND_TRANSPARENT
@@ -61,9 +61,9 @@ position:
     parents:
     - ROOT_ID
     - GRID_ID
-  CHART-NHKMBZNW:
+  CHART-R1ZJR3ZG:
     children: []
-    id: CHART-NHKMBZNW
+    id: CHART-R1ZJR3ZG
     meta:
       chartId: 20
       height: 50
@@ -74,7 +74,7 @@ position:
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-N-NBVPSIP3
+    - ROW-N-OKQH58Z3
 metadata:
   color_scheme: ''
   refresh_frequency: 0
