--- a/base/configs/superset/assets/datasets/PostgreSQL/NCD_Missed_Appointments_Query-dataset.yaml
+++ b/base/configs/superset/assets/datasets/PostgreSQL/NCD_Missed_Appointments_Query-dataset.yaml
@@ -28,29 +28,32 @@ sql: "SELECT\n    f_facility AS \"Facility Name\",\n    f_district AS \"Facility
   ,\n        obs_appointment_notes.answers_coded AS \"appointment_notes\",\n     \
   \   CASE \n            WHEN followup_visit.visit_uuid IS NOT NULL THEN 'Yes'\n \
   \           ELSE 'No'\n        END AS \"fulfilled_appointment\"\n    FROM patients\
-  \ pa\n    LEFT OUTER JOIN visits vi ON vi.patient_uuid = pa.patient_uuid AND vi.type\
-  \ IN ('NCD New Visit')\n    LEFT OUTER JOIN locations facility_address ON facility_address.uuid\
-  \ = vi.location_uuid\n\n    LEFT OUTER JOIN (\n        SELECT obs2.visit_uuid, MAX(obs2.obs_date_time),\
-  \ obs2.answer_datetime, obs2.encounter_uuid\n        FROM observations obs2\n  \
-  \      WHERE obs2.question_uuid = 'e9c145c1-f4e9-4c34-b237-da069939dc38' AND obs2.encounter_type\
+  \ pa\n    LEFT OUTER JOIN visits vi ON vi.visit_voided = false AND vi.patient_uuid\
+  \ = pa.patient_uuid AND vi.type IN ('NCD New Visit')\n    LEFT OUTER JOIN locations\
+  \ facility_address ON facility_address.uuid = vi.location_uuid\n\n    LEFT OUTER\
+  \ JOIN (\n        SELECT obs2.visit_uuid, MAX(obs2.obs_date_time), obs2.answer_datetime,\
+  \ obs2.encounter_uuid\n        FROM observations obs2\n        WHERE obs2.obs_voided\
+  \ = false AND obs2.question_uuid = 'e9c145c1-f4e9-4c34-b237-da069939dc38' AND obs2.encounter_type\
   \ IN ('Health Center - NCD Screening')\n        GROUP BY obs2.visit_uuid, obs2.question_uuid,\
   \ obs2.answer_datetime, obs2.encounter_uuid\n    ) AS obs_followup_date ON obs_followup_date.visit_uuid\
   \ = vi.visit_uuid\n\n    LEFT OUTER JOIN (\n        SELECT obs1.obs_id, obs1.visit_uuid,\
   \ STRING_AGG(obs1.answer_coded, ', ') AS answer_coded, obs1.encounter_uuid\n   \
-  \     FROM observations obs1\n        WHERE obs1.question_uuid = '2e27bbf9-d744-46a2-a7d4-cecd33c28b8a'\n\
-  \        GROUP BY obs1.visit_uuid, obs1.question_uuid, obs1.answer_coded, obs1.encounter_uuid,\
-  \ obs1.obs_id\n    ) AS obs_followup_for ON obs_followup_date.encounter_uuid = obs_followup_for.encounter_uuid\n\
-  \    \n    LEFT OUTER JOIN (\n        SELECT obs3.visit_uuid, STRING_AGG(obs3.answer_coded,\
+  \     FROM observations obs1\n        WHERE obs1.obs_voided = false AND obs1.question_uuid\
+  \ = '2e27bbf9-d744-46a2-a7d4-cecd33c28b8a'\n        GROUP BY obs1.visit_uuid, obs1.question_uuid,\
+  \ obs1.answer_coded, obs1.encounter_uuid, obs1.obs_id\n    ) AS obs_followup_for\
+  \ ON obs_followup_date.encounter_uuid = obs_followup_for.encounter_uuid\n    \n\
+  \    LEFT OUTER JOIN (\n        SELECT obs3.visit_uuid, STRING_AGG(obs3.answer_coded,\
   \ ', ') AS answers_coded, obs3.encounter_uuid\n        FROM observations obs3\n\
-  \        WHERE obs3.question_uuid = '9f7c8739-3ea3-4f7f-8648-d6c36fef7be2'\n   \
-  \     GROUP BY obs3.visit_uuid, obs3.encounter_uuid\n    ) AS obs_appointment_notes\
+  \        WHERE obs3.obs_voided = false AND obs3.question_uuid = '9f7c8739-3ea3-4f7f-8648-d6c36fef7be2'\n\
+  \        GROUP BY obs3.visit_uuid, obs3.encounter_uuid\n    ) AS obs_appointment_notes\
   \  ON obs_appointment_notes.encounter_uuid = obs_followup_for.encounter_uuid\n\n\
-  \    LEFT OUTER JOIN visits followup_visit ON followup_visit.patient_uuid = pa.patient_uuid\
-  \ AND DATE(followup_visit.date_started) >= DATE(obs_followup_date.answer_datetime)\
-  \ AND DATE(followup_visit.date_started) <= DATE(obs_followup_date.answer_datetime\
-  \ + INTERVAL '7 days') AND followup_visit.type IN ('NCD Follow-up Visit')\n\n  \
-  \  WHERE obs_followup_for.answer_coded IS NOT NULL\n\n) AS patient_info\n\nWHERE\
-  \ patient_info.fulfilled_appointment = 'No'"
+  \    LEFT OUTER JOIN visits followup_visit ON followup_visit.visit_voided = false\
+  \ AND followup_visit.patient_uuid = pa.patient_uuid AND DATE(followup_visit.date_started)\
+  \ >= DATE(obs_followup_date.answer_datetime) AND DATE(followup_visit.date_started)\
+  \ <= DATE(obs_followup_date.answer_datetime + INTERVAL '7 days') AND followup_visit.type\
+  \ IN ('NCD Follow-up Visit')\n\n    WHERE pa.person_voided = false AND obs_followup_for.answer_coded\
+  \ IS NOT NULL\n\n) AS patient_info\n\nWHERE patient_info.fulfilled_appointment =\
+  \ 'No'"
 params: null
 template_params: null
 filter_select_enabled: false
