--- a/base/configs/superset/assets/datasets/PostgreSQL/NCD_Referral_Status_Query-dataset.yaml
+++ b/base/configs/superset/assets/datasets/PostgreSQL/NCD_Referral_Status_Query-dataset.yaml
@@ -34,32 +34,34 @@ sql: "SELECT\n    f_facility AS \"Facility Name\",\n    f_district AS \"Facility
   diabetes_reason_for_referral\",\n        obs_hypertension_referral_reason.answer_coded\
   \ AS \"hypertension_reason_for_referral\",\n        CASE \n            WHEN referral_visit.visit_uuid\
   \ IS NOT NULL THEN 'Yes'\n            ELSE 'No'\n        END AS \"fulfilled_referral\"\
-  \n    FROM patients pa\n    LEFT OUTER JOIN visits vi on vi.patient_uuid = pa.patient_uuid\n\
-  \    LEFT OUTER JOIN locations facility_address ON facility_address.uuid = vi.location_uuid\n\
-  \    LEFT OUTER JOIN (\n        SELECT obs1.obs_id, obs1.visit_uuid, MAX(obs_date_time)\
-  \ AS obs_date_time, STRING_AGG(obs1.answer_coded, ', ') AS answer_coded, obs1.encounter_uuid\n\
-  \        FROM observations obs1\n        WHERE obs1.question_uuid = '758b9dd8-b6d0-4ac2-b245-0e7bffb4693a'\
+  \n    FROM patients pa\n    LEFT OUTER JOIN visits vi ON vi.visit_voided = false\
+  \ AND vi.patient_uuid = pa.patient_uuid\n    LEFT OUTER JOIN locations facility_address\
+  \ ON facility_address.uuid = vi.location_uuid\n    LEFT OUTER JOIN (\n        SELECT\
+  \ obs1.obs_id, obs1.visit_uuid, MAX(obs_date_time) AS obs_date_time, STRING_AGG(obs1.answer_coded,\
+  \ ', ') AS answer_coded, obs1.encounter_uuid\n        FROM observations obs1\n \
+  \       WHERE obs1.obs_voided = false AND obs1.question_uuid = '758b9dd8-b6d0-4ac2-b245-0e7bffb4693a'\
   \ AND obs1.encounter_type IN ('Health Center - NCD Screening', 'NCD Consultation',\
   \ 'NCD Medical History')\n        GROUP BY obs1.visit_uuid, obs1.question_uuid,\
   \ obs1.answer_coded, obs1.encounter_uuid, obs1.obs_id\n    ) AS obs_referral_centre\
   \ on obs_referral_centre.visit_uuid = vi.visit_uuid\n    \n    LEFT OUTER JOIN (\n\
   \        SELECT obs2.visit_uuid, MAX(obs2.date_created), STRING_AGG(obs2.answer_coded,\
   \ ', ') AS answer_coded, obs2.encounter_uuid\n        FROM observations obs2\n \
-  \       WHERE obs2.question_uuid = 'cde3716a-2b98-4f10-b619-4d5a5a55503c'\n    \
-  \    GROUP BY obs2.visit_uuid, obs2.question_uuid, obs2.answer_coded, obs2.encounter_uuid\n\
+  \       WHERE obs2.obs_voided = false AND obs2.question_uuid = 'cde3716a-2b98-4f10-b619-4d5a5a55503c'\n\
+  \        GROUP BY obs2.visit_uuid, obs2.question_uuid, obs2.answer_coded, obs2.encounter_uuid\n\
   \    ) AS obs_diabetes_referral_reason  on obs_diabetes_referral_reason.encounter_uuid\
   \ = obs_referral_centre.encounter_uuid\n    \n    LEFT OUTER JOIN (\n        SELECT\
   \ obs3.visit_uuid, MAX(obs3.date_created), obs3.answer_coded, obs3.encounter_uuid\n\
-  \        FROM observations obs3\n        WHERE obs3.question_uuid = '68f158ff-6396-4bab-8194-73255282bd23'\n\
-  \        GROUP BY obs3.visit_uuid, obs3.question_uuid, obs3.answer_coded, obs3.encounter_uuid\n\
-  \    ) AS obs_hypertension_referral_reason  on obs_hypertension_referral_reason.encounter_uuid\
-  \ = obs_referral_centre.encounter_uuid\n\n    LEFT OUTER JOIN visits referral_visit\
-  \ ON referral_visit.patient_uuid = pa.patient_uuid AND DATE(referral_visit.date_started)\
+  \        FROM observations obs3\n        WHERE obs3.obs_voided = false AND obs3.question_uuid\
+  \ = '68f158ff-6396-4bab-8194-73255282bd23'\n        GROUP BY obs3.visit_uuid, obs3.question_uuid,\
+  \ obs3.answer_coded, obs3.encounter_uuid\n    ) AS obs_hypertension_referral_reason\
+  \  on obs_hypertension_referral_reason.encounter_uuid = obs_referral_centre.encounter_uuid\n\
+  \n    LEFT OUTER JOIN visits referral_visit ON referral_visit.visit_voided = false\
+  \ AND referral_visit.patient_uuid = pa.patient_uuid AND DATE(referral_visit.date_started)\
   \ >= DATE(vi.date_started) AND DATE(referral_visit.date_started) <= DATE(vi.date_started\
   \ + INTERVAL '7 days') AND referral_visit.location = TRIM(BOTH ' ' FROM split_part(obs_referral_centre.answer_coded,\
-  \ '>', 3))\n\n    WHERE obs_referral_centre.answer_coded IS NOT NULL\n\n) AS patient_info\
-  \ \nWHERE patient_info.visit_type IN ('NCD New Visit', 'NCD Follow-up Visit')  AND\
-  \ patient_info.fulfilled_referral = 'No'\n"
+  \ '>', 3))\n\n    WHERE pa.person_voided = false AND obs_referral_centre.answer_coded\
+  \ IS NOT NULL\n\n) AS patient_info \nWHERE patient_info.visit_type IN ('NCD New\
+  \ Visit', 'NCD Follow-up Visit')  AND patient_info.fulfilled_referral = 'No'\n"
 params: null
 template_params: null
 filter_select_enabled: false
