--- a/base/configs/superset/assets/datasets/PostgreSQL/Patients_Screened_For_NCD_For_The_First_Time_Query-dataset.yaml
+++ b/base/configs/superset/assets/datasets/PostgreSQL/Patients_Screened_For_NCD_For_The_First_Time_Query-dataset.yaml
@@ -104,25 +104,25 @@ sql: "SELECT \"Facility Name\" AS \"Facility Name\",\n       \"Facility District
   Started on Medication\",\n        STRING_AGG(DISTINCT medications.drug_name, ',\
   \ ') AS \"Drug Names\",\n        MAX(medications.medication_duration_in_weeks) AS\
   \ max_medication_duration_in_weeks\n    FROM \n        encounters e \n    LEFT JOIN\
-  \ \n        patients p ON e.patient_uuid = p.patient_uuid\n    LEFT JOIN \n    \
-  \    visits v ON e.visit_uuid = v.visit_uuid\n    LEFT JOIN \n        observations\
-  \ o ON e.encounter_uuid = o.encounter_uuid AND o.question_uuid IN (\n          \
-  \  'b8edfbde-5f94-421e-8b25-e86afe35d0f7',\n            'f8fd0782-a9fc-4c02-b556-72740853bc18',\n\
-  \            '5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n            '5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n\
-  \            '1343AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n            '5085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n\
-  \            '5086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n            'a89c60c0-1350-11df-a1f1-0026b9348838',\n\
-  \            '5087AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n            '5088AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n\
-  \            '4a6ad2db-86af-4acc-906b-b749b7f6cda6',\n            'f52d731e-58da-4f3a-a480-77c5e9d8d2eb',\n\
-  \            '163594AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n            'a8af7520-1350-11df-a1f1-0026b9348838',\n\
-  \            'c423325e-be95-42e2-ae38-b940c2586327',\n            '07015405-c865-4a22-8ad1-c8863d5f005b',\n\
-  \            '45583478-f703-46e3-b63a-54b0a95c25f0',\n            '76ca08a5-2128-4b53-afba-74227b015924',\n\
-  \            '758b9dd8-b6d0-4ac2-b245-0e7bffb4693a',\n            'dff491e3-b14c-4b32-ab64-63b96966d72d',\n\
-  \            '2e27bbf9-d744-46a2-a7d4-cecd33c28b8a',\n            'e9c145c1-f4e9-4c34-b237-da069939dc38',\n\
-  \            '805c3a0b-cd38-4ed6-b4f8-f3af0fc118ad'\n        )\n    LEFT JOIN \n\
-  \        locations l ON e.location_uuid = l.uuid\n    LEFT JOIN \n        (\n  \
-  \          SELECT \n                CASE \n                    WHEN d_o.duration_unit_uuid\
-  \ = '1822AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA' THEN (d_o.duration / 672)\n         \
-  \           WHEN d_o.duration_unit_uuid = '1072AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\
+  \ \n        patients p ON e.patient_uuid = p.patient_uuid AND p.person_voided =\
+  \ false\n    LEFT JOIN \n        visits v ON e.visit_uuid = v.visit_uuid AND v.visit_voided\
+  \ = false\n    LEFT JOIN \n        observations o ON o.obs_voided = false AND e.encounter_uuid\
+  \ = o.encounter_uuid AND o.question_uuid IN (\n            'b8edfbde-5f94-421e-8b25-e86afe35d0f7',\n\
+  \            'f8fd0782-a9fc-4c02-b556-72740853bc18',\n            '5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n\
+  \            '5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n            '1343AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n\
+  \            '5085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n            '5086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n\
+  \            'a89c60c0-1350-11df-a1f1-0026b9348838',\n            '5087AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n\
+  \            '5088AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n            '4a6ad2db-86af-4acc-906b-b749b7f6cda6',\n\
+  \            'f52d731e-58da-4f3a-a480-77c5e9d8d2eb',\n            '163594AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA',\n\
+  \            'a8af7520-1350-11df-a1f1-0026b9348838',\n            'c423325e-be95-42e2-ae38-b940c2586327',\n\
+  \            '07015405-c865-4a22-8ad1-c8863d5f005b',\n            '45583478-f703-46e3-b63a-54b0a95c25f0',\n\
+  \            '76ca08a5-2128-4b53-afba-74227b015924',\n            '758b9dd8-b6d0-4ac2-b245-0e7bffb4693a',\n\
+  \            'dff491e3-b14c-4b32-ab64-63b96966d72d',\n            '2e27bbf9-d744-46a2-a7d4-cecd33c28b8a',\n\
+  \            'e9c145c1-f4e9-4c34-b237-da069939dc38',\n            '805c3a0b-cd38-4ed6-b4f8-f3af0fc118ad'\n\
+  \        )\n    LEFT JOIN \n        locations l ON e.location_uuid = l.uuid\n  \
+  \  LEFT JOIN \n        (\n            SELECT \n                CASE \n         \
+  \           WHEN d_o.duration_unit_uuid = '1822AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\
+  \ THEN (d_o.duration / 672)\n                    WHEN d_o.duration_unit_uuid = '1072AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\
   \ THEN (d_o.duration / 7)\n                    WHEN d_o.duration_unit_uuid = '1073AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\
   \ THEN d_o.duration\n                    WHEN d_o.duration_unit_uuid = '1074AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\
   \ THEN (d_o.duration * 4.34524)\n                    WHEN d_o.duration_unit_uuid\
@@ -135,10 +135,11 @@ sql: "SELECT \"Facility Name\" AS \"Facility Name\",\n       \"Facility District
   \   {% if to_dttm != undefined and to_dttm is not none %}\n                AND medications.date_activated\
   \ <= '{{ to_dttm }}'\n            {% else %}\n                AND medications.date_activated\
   \ <= v.date_stopped\n            {%- endif -%} \n            )\n    WHERE \n   \
-  \     e.encounter_type IN ('Health Center - NCD Screening')\n        AND (e.encounter_datetime\
-  \ - p.birthdate) >= interval '40 years'\n        AND e.patient_uuid NOT IN (\n \
-  \           SELECT \n                patient_uuid \n            FROM \n        \
-  \        encounters previous_e\n            WHERE \n                previous_e.patient_uuid\
+  \     e.encounter_voided = false AND e.encounter_type IN ('Health Center - NCD Screening')\n\
+  \        AND (e.encounter_datetime - p.birthdate) >= interval '40 years'\n     \
+  \   AND e.patient_uuid NOT IN (\n            SELECT \n                patient_uuid\
+  \ \n            FROM \n                encounters previous_e\n            WHERE\
+  \ \n                previous_e.encounter_voided = false AND previous_e.patient_uuid\
   \ = e.patient_uuid AND previous_e.encounter_type IN ('Health Center - NCD Screening')\
   \ \n                {% if from_dttm != undefined and from_dttm is not none %}\n\
   \                    AND DATE(previous_e.encounter_datetime) <= '{{ from_dttm }}'\n\
