--- a/base/configs/superset/assets/charts/indicators_for_monitoring_ccs_pivot_table.yaml
+++ b/base/configs/superset/assets/charts/indicators_for_monitoring_ccs_pivot_table.yaml
@@ -1,4 +1,4 @@
-slice_name: Cervical Cancer Screening Indicators
+slice_name: Cervical Cancer Screen Indicators
 description: null
 certified_by: null
 certification_details: null
@@ -20,18 +20,7 @@ params:
   - screen ccs positive received treatment
   - percentage screen ccs positive received treatment
   metricsLayout: ROWS
-  adhoc_filters:
-  - expressionType: SIMPLE
-    subject: women_aged_30_49
-    operator: IS NOT NULL
-    operatorId: IS_NOT_NULL
-    comparator: null
-    clause: WHERE
-    sqlExpression: null
-    isExtra: false
-    isNew: false
-    datasourceWarning: false
-    filterOptionName: filter_ca6zjx4c3c_fputwptq5t6
+  adhoc_filters: []
   row_limit: 10000
   order_desc: true
   aggregateFunction: Sum
@@ -63,15 +52,13 @@ params:
   dashboards:
   - 3
 query_context: '{"datasource":{"id":15,"type":"table"},"force":false,"queries":[{"time_range":"No
-  filter","granularity":"date_started","filters":[{"col":"women_aged_30_49","op":"IS
-  NOT NULL"}],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":[],"metrics":["screen
+  filter","granularity":"date_started","filters":[],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":[],"metrics":["screen
   ccs","percentage screen","screen ccs positive","percentage screen ccs positive","screen
   ccs positive received treatment","percentage screen ccs positive received treatment"],"orderby":[["screen
   ccs",false]],"annotation_layers":[],"row_limit":10000,"series_limit":0,"order_desc":true,"url_params":{},"custom_params":{},"custom_form_data":{}}],"form_data":{"datasource":"15__table","viz_type":"pivot_table_v2","slice_id":33,"granularity_sqla":"date_started","time_grain_sqla":"P1D","time_range":"No
   filter","groupbyColumns":[],"groupbyRows":[],"metrics":["screen ccs","percentage
   screen","screen ccs positive","percentage screen ccs positive","screen ccs positive
-  received treatment","percentage screen ccs positive received treatment"],"metricsLayout":"ROWS","adhoc_filters":[{"expressionType":"SIMPLE","subject":"women_aged_30_49","operator":"IS
-  NOT NULL","operatorId":"IS_NOT_NULL","comparator":null,"clause":"WHERE","sqlExpression":null,"isExtra":false,"isNew":false,"datasourceWarning":false,"filterOptionName":"filter_ca6zjx4c3c_fputwptq5t6"}],"row_limit":10000,"order_desc":true,"aggregateFunction":"Sum","transposePivot":false,"valueFormat":"~g","date_format":"smart_date","rowOrder":"key_a_to_z","colOrder":"key_a_to_z","conditional_formatting":[{"colorScheme":"#ACE1C4","column":"screen
+  received treatment","percentage screen ccs positive received treatment"],"metricsLayout":"ROWS","adhoc_filters":[],"row_limit":10000,"order_desc":true,"aggregateFunction":"Sum","transposePivot":false,"valueFormat":"~g","date_format":"smart_date","rowOrder":"key_a_to_z","colOrder":"key_a_to_z","conditional_formatting":[{"colorScheme":"#ACE1C4","column":"screen
   ccs","operator":"None"},{"colorScheme":"#ACE1C4","column":"screen ccs positive","operator":"None"},{"colorScheme":"#FDE380","column":"percentage
   screen ccs positive","operator":"None"},{"colorScheme":"#FDE380","column":"screen
   ccs positive received treatment","operator":"None"},{"colorScheme":"#ACE1C4","column":"screen
