--- a/base/configs/superset/assets/datasets/Analytics/indicators_for_monitoring_ccs_dataset.yaml
+++ b/base/configs/superset/assets/datasets/Analytics/indicators_for_monitoring_ccs_dataset.yaml
@@ -1,24 +1,25 @@
-table_name: Indicators for Monitoring CCS Management Program
+table_name: ccs-indicators
 main_dttm_col: date_started
 description: null
 default_endpoint: null
 offset: 0
 cache_timeout: null
 schema: null
-sql: "SELECT\n  t1.date_started,\n  t1.patient_uuid,\n  t3.postal_code AS health_facility_code,\n\
-  \  t3.name AS health_facility_name,\n  t3.county_district AS health_facility_district,\n\
-  \  t3.state_province AS health_facility_province,\n  DATE_PART ('year', age (t1.date_started,\
-  \ t2.birthdate)) AS age,\n  t2.gender,\n  via.is_screen_cc,\n  via.is_screen_cc_uuid,\n\
-  \  via.test_type,\n  via.via_test_result,\n  via.via_test_result_uuid,\n  via.via_treatment,\n\
-  \  CASE\n    WHEN DATE_PART ('year', age (t1.date_started, t2.birthdate)) BETWEEN\
-  \ 30 AND 49 THEN 'count/(%)'\n    ELSE NULL\n  END AS women_aged_30_49,\nCASE\n\
-  \    WHEN is_screen_cc_uuid='1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA' THEN 1\n    ELSE\
-  \ 0\n  END AS screen_for_ccs,\n  CASE\n    WHEN is_screen_cc_uuid='1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\n\
-  \    AND via_test_result_uuid='703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA' THEN 1\n  \
-  \  ELSE 0\n  END AS screen_cc_and_positive,\n  CASE -- \n    WHEN is_screen_cc_uuid='1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\n\
-  \    AND via.via_treatment_uuid='4070623e-945b-499f-8b62-316e699a3cc7'\n    AND\
-  \ via.via_test_result_uuid='703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\n\tAND via.ca_treatment_uuid\
-  \ ='d534da3e-7b59-40ca-a415-d2f5eb94f4a3' THEN 1\n    ELSE 0\n  END AS screen_cc_and_positive_received_treatment\n\
+sql: "SELECT\n  MAX(t1.date_started) AS date_started,\n  MAX(t1.patient_uuid) AS patient_uuid,\n\
+  \  MAX(t3.postal_code) AS health_facility_code,\n  MAX(t3.name) AS health_facility_name,\n\
+  \  MAX(t3.county_district) AS health_facility_district,\n  MAX(t3.state_province)\
+  \ AS health_facility_province,\n  MAX(\n    DATE_PART ('year', age (t1.date_started,\
+  \ t2.birthdate))\n  ) AS age,\n  MAX(t2.gender) AS gender,\n  MAX(via.is_screen_cc)\
+  \ AS is_screen_cc,\n  MAX(via.is_screen_cc_uuid) AS is_screen_cc_uuid,\n  MAX(via.test_type)\
+  \ AS test_type,\n  MAX(via.via_test_result) AS via_test_result,\n  MAX(via.via_test_result_uuid)\
+  \ AS via_test_result_uuid,\n  MAX(via.via_treatment) AS via_treatment,\n  MAX(\n\
+  \    CASE\n      WHEN is_screen_cc_uuid='1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA' THEN\
+  \ 1\n      ELSE 0\n    END\n  ) AS screen_for_ccs,\n  MAX(\n    CASE\n      WHEN\
+  \ via_test_result_uuid='703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA' THEN 1\n      ELSE\
+  \ 0\n    END\n  ) AS screen_cc_and_positive,\n  MAX(\n    CASE\n      WHEN (\n \
+  \       via.via_treatment_uuid='4070623e-945b-499f-8b62-316e699a3cc7'\n        AND\
+  \ via.via_test_result_uuid='703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\n        AND via.ca_treatment_uuid='d534da3e-7b59-40ca-a415-d2f5eb94f4a3'\n\
+  \      ) THEN 1\n      ELSE 0\n    END\n  ) AS screen_cc_and_positive_received_treatment\n\
   FROM\n  visits t1\n  LEFT JOIN patients t2 ON (t1.patient_uuid=t2.patient_uuid)\n\
   \  LEFT JOIN locations t3 ON (t1.location_uuid=t3.uuid)\n  -- Screen for CS VIA\
   \ test, result and treatment\n  LEFT JOIN (\n    SELECT\n      o.encounter_uuid,\n\
@@ -26,7 +27,7 @@ sql: "SELECT\n  t1.date_started,\n  t1.patient_uuid,\n  t3.postal_code AS health
   \      o.answer_coded_uuid AS is_screen_cc_uuid,\n      obs1.answer_coded AS test_type,\n\
   \      obs3.answer_coded AS via_test_result,\n      obs3.answer_coded_uuid AS via_test_result_uuid,\n\
   \      obs6.answer_coded AS via_treatment,\n      obs6.answer_coded_uuid AS via_treatment_uuid,\n\
-  \t  obs7.answer_coded AS ca_treatment,\n      obs7.answer_coded_uuid AS ca_treatment_uuid\n\
+  \      obs7.answer_coded AS ca_treatment,\n      obs7.answer_coded_uuid AS ca_treatment_uuid\n\
   \    FROM\n      observations o\n      -- Test Type\n      LEFT JOIN observations\
   \ obs1 ON (\n        o.encounter_uuid=obs1.encounter_uuid\n        AND o.answer_coded_uuid='1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'\n\
   \        AND obs1.question_uuid='baf42703-65ed-4ea3-9d3f-e5cf0305d2fd'\n      )\n\
@@ -35,23 +36,25 @@ sql: "SELECT\n  t1.date_started,\n  t1.patient_uuid,\n  t3.postal_code AS health
   \     AND obs3.question_uuid='f90dc342-292e-4a47-9fef-860a03bf255f'\n      )\n \
   \     -- VIA Treatment\n      LEFT JOIN observations obs6 ON (\n        o.encounter_uuid=obs6.encounter_uuid\n\
   \        AND obs1.answer_coded_uuid='f90dc342-292e-4a47-9fef-860a03bf255f'\n   \
-  \     AND obs6.question_uuid='6027bf55-5288-4ace-bc7f-b75d2291f8e0'\n      )\n\t\
-  -- Cervical Cancer Treatment\n      LEFT JOIN observations obs7 ON (\n        o.encounter_uuid=obs7.encounter_uuid\n\
-  \        AND obs1.answer_coded_uuid='f90dc342-292e-4a47-9fef-860a03bf255f'\n   \
-  \     AND obs7.question_uuid='1ca7d712-f7d7-4e09-8184-048bc4173902'\n      )\n \
-  \   WHERE\n      o.question_uuid='75681e39-683c-4de9-9ca7-5b55b736bfa7' -- screen\
+  \     AND obs6.question_uuid='6027bf55-5288-4ace-bc7f-b75d2291f8e0'\n      )\n \
+  \     -- Cervical Cancer Treatment\n      LEFT JOIN observations obs7 ON (\n   \
+  \     o.encounter_uuid=obs7.encounter_uuid\n        AND obs1.answer_coded_uuid='f90dc342-292e-4a47-9fef-860a03bf255f'\n\
+  \        AND obs7.question_uuid='1ca7d712-f7d7-4e09-8184-048bc4173902'\n      )\n\
+  \    WHERE\n      o.question_uuid='75681e39-683c-4de9-9ca7-5b55b736bfa7' -- screen\
   \ for ccs\n      AND o.obs_voided IS FALSE\n    GROUP BY\n      o.encounter_uuid,\n\
   \      o.visit_uuid,\n      o.answer_coded,\n      o.answer_coded_uuid,\n      obs1.answer_coded,\n\
   \      obs3.answer_coded,\n      obs3.answer_coded_uuid,\n      obs6.answer_coded,\n\
   \      obs6.answer_coded_uuid,\n      obs1.question_uuid,\n      obs3.question_uuid,\n\
-  \      obs6.question_uuid,\n\t  obs7.answer_coded,\n      obs7.answer_coded_uuid,\n\
-  \t  obs7.question_uuid\n  ) via ON (\n    via.visit_uuid=t1.visit_uuid\n    AND\
+  \      obs6.question_uuid,\n      obs7.answer_coded,\n      obs7.answer_coded_uuid,\n\
+  \      obs7.question_uuid\n  ) via ON (\n    via.visit_uuid=t1.visit_uuid\n    AND\
   \ via.visit_uuid IS NOT NULL\n  )\nWHERE\n  -- Cervical Cancer New Visit\n  t1.visit_type_uuid\
-  \ IN ('cad25c07-4657-4167-8b57-8ea1a3830e9b')\n  AND t1.visit_voided IS FALSE\n\
-  \  AND t2.person_voided IS FALSE\n  AND t2.patient_uuid IS NOT NULL\n  -- Women\
-  \ aged between 30 and 49\n  AND t2.gender='F'\n  AND DATE_PART ('year', age (now\
-  \ (), t2.birthdate)) BETWEEN 30 AND 49\n  -- Last 12 months\n  AND t1.date_started>=(NOW\
-  \ ()-INTERVAL '1 year')"
+  \ IN ('cad25c07-4657-4167-8b57-8ea1a3830e9b')\n  -- Cervical Cancer Follow-up Visit\
+  \ - 'd2bf1776-671d-4e0f-a850-f7fef7aa4044'\n  AND t1.visit_voided IS FALSE\n  AND\
+  \ t2.person_voided IS FALSE\n  AND t2.patient_uuid IS NOT NULL\n  -- Women aged\
+  \ between 30 and 49\n  AND t2.gender='F'\n  AND DATE_PART ('year', age (t1.date_started,\
+  \ t2.birthdate)) BETWEEN 30 AND 49\n  -- Last 12 months. Use dashboards filters,\
+  \ defaults to last 12 months\n  -- AND t1.date_started>=(NOW ()-INTERVAL '1 year')\n\
+  GROUP BY\n  t2.patient_uuid"
 params: null
 template_params: null
 filter_select_enabled: false
@@ -73,8 +76,8 @@ metrics:
     \ cancer screening to detect the pre-cancerous lesion and had positive result\
     \ in the last 12 months)"
   metric_type: null
-  expression: ROUND((SUM(screen_cc_and_positive)::decimal / NULLIF(COUNT(DISTINCT
-    patient_uuid), 0)) * 100, 2)
+  expression: CONCAT(ROUND((SUM(screen_cc_and_positive)::decimal / NULLIF(COUNT(DISTINCT
+    patient_uuid), 0)) * 100, 2),'%')
   description: null
   d3format: null
   extra:
@@ -92,8 +95,8 @@ metrics:
     \ of women aged 30\u200B - \u200B\u200B49 who had positive result and received\
     \ appropriate cervical cancer lesion treatment in the last 12 months)"
   metric_type: null
-  expression: ROUND((SUM(screen_cc_and_positive_received_treatment)::decimal / NULLIF(SUM(screen_cc_and_positive),
-    0)) * 100, 2)
+  expression: CONCAT(ROUND((SUM(screen_cc_and_positive_received_treatment)::decimal
+    / NULLIF(SUM(screen_cc_and_positive), 0)) * 100, 2),'%')
   description: null
   d3format: null
   extra:
